@@ -11,6 +11,7 @@ milestones_compact_list=Compact list
 milestones_list_by_group=List by group
 milestones_show_estimations=Show estimations
 milestones_disable_chat_notifications=Disable milestone notifications
+milestones_write_file=Write milestones to file
 
 [mod-setting-description]
 milestones_check_frequency=The mod will wait this many ticks between each completion check.\nLower this if you care about time precision, raise if you want less performance impact.\nIf you set this to less than 60, the GUI will also show milliseconds.
@@ -19,6 +20,7 @@ milestones_compact_list=Removes the "Completed at" labels before each time.
 milestones_list_by_group=If checked, milestones will be grouped together in categories.\nIf unchecked, all milestones will be listed together chronologically.
 milestones_show_estimations=If checked, milestone times that were estimated from production history will show the estimation precision after the time (Looks like "(±5m)").
 milestones_disable_chat_notifications=If checked, no chat notification will appear when a new milestone is reached. This is per-player, so it only affects you.
+milestones_write_file=If checked, milestone times will be appended to a milestones-MAPSEED.txt file in the script output folder in a machine-readable format. This can be useful for external programs.
 
 [shortcut-name]
 milestones_toggle_gui=Show milestones
